workspace-sf/force-app/main/default/objects/ProdutoIntegracaoOpin__c/ProdutoIntegracaoOpin__c.object-meta.xml
<CustomObject>
    <label>Produto Integração Opin</label>
    <nameField>
        <label>Nome de Produto Integração Opin</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Produtos Integração Opin</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>