workspace-sf/force-app/main/default/objects/ProdutoIntegracaoOpin__c/fields/Dados_Ultima_Integracao__c.field-meta.xml
<CustomField>
    <fullName>Dados_Ultima_Integracao__c</fullName>
    <label>Dados Última Integração</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>