workspace-sf/force-app/main/default/objects/ProdutoIntegracaoOpin__c/fields/Data_Ultima_Integracao__c.field-meta.xml
<CustomField>
    <fullName>Data_Ultima_Integracao__c</fullName>
    <label>Data Última Integração</label>
    <type>DateTime</type>
</CustomField>