workspace-sf/force-app/main/default/objects/ProdutoIntegracaoOpin__c/fields/Produto__c.field-meta.xml
<CustomField>
    <fullName>Produto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Produto Integração Opin</relationshipLabel>
    <relationshipName>Produto_Integracao_Opin</relationshipName>
    <type>Lookup</type>
</CustomField>